# csci544-group12-project

./: .gitignore  README.md  analyze_pilots.py  analyze_pilots_debate.py  convert.py  debate_judge.py  eval_sim_debates.py  evaluate.py  filtering.py  interfaces.py  judge_top.py  main.py  models.py  orchestrator.py  prompts.py  pyproject.toml  run_pipeline.ipynb  score_reddit.py  sim.md  utils.py  visualization.py
core/: README.md  agents.py  llm_client.py  moderation.py  reddit_utils.py  schemas.py
data/: scraper.py  sim_seeds.jsonl  sim_seeds_final.jsonl
data_pipeline/: README.md  debate_toxic_classification.ipynb  filtering.py  score_reddit.py
eval_records/: eval_moderated_reddit_abortion_rights_1s3uc44_0cbf6_gemma4_e4b.jsonl  eval_moderated_reddit_abortion_rights_1s3uc44_7182b_llama3.1_8b.jsonl  eval_moderated_reddit_abortion_rights_1s9zdxj_063df_fredrezones55_Gemma-4-Uncensored-HauhauCS-Aggressive_e4b.jsonl  eval_moderated_reddit_abortion_rights_1s9zdxj_661af_gemma4_e4b.jsonl  eval_moderated_reddit_abortion_rights_1s9zdxj_c7c86_gemma4_e4b.jsonl  eval_naive_abortion_rights_3e146_gemma4_e4b.jsonl  eval_naive_abortion_rights_4eaaf_gemma4_e4b.jsonl  eval_naive_abortion_rights_53802_fredrezones55_Gemma-4-Uncensored-HauhauCS-Aggressive_e4b.jsonl  eval_naive_abortion_rights_647f4_llama3.1_8b.jsonl  eval_naive_abortion_rights_bfbc6_gemma4_e4b.jsonl  eval_reddit_abortion_rights_1s3uc44_b05d4_llama3.1_8b.jsonl  eval_reddit_abortion_rights_1s3uc44_f0b36_gemma4_e4b.jsonl  eval_reddit_abortion_rights_1s9zdxj_054c2_gemma4_e4b.jsonl  eval_reddit_abortion_rights_1s9zdxj_3d4b7_gemma4_e4b.jsonl  moderated_reddit_abortion_rights_1s3uc44_42d1b_llama3.1_8b_debate_eval.jsonl  summary.json  (+15 more)
(+43 files in other folders)
