[project]
name = "csci-544-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Inference
    "huggingface-hub[hf-xet]>=0.36.2",
    "torch",
    "transformers>=4.57.6",
    "optimum[onnxruntime]>=2.1.0",

    # Plotting
    "plotly>=6.7.0",
    "pydot>=4.0.1",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pyright]
reportMissingTypeStubs = false
