[project]
name = "csci-544-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=0.36.2",
    "transformers>=4.57.6",
    "optimum[onnxruntime]>=2.1.0",
    "plotly>=6.7.0",
    "pydot>=4.0.1",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
]

[tool.pyright]
reportMissingTypeStubs = false