[project]
name = "csci-544-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=0.36.2",
    "transformers>=4.57.6",
    "optimum[onnxruntime]>=2.1.0",
    "pydantic>=2.12.5",
    "openai>=2.32.0",
    "ipykernel>=7.2.0",
    "iprogress>=0.4",
    "tqdm>=4.67.3",
]

[tool.pyright]
reportMissingTypeStubs = false
